--- a/.github/workflows/prepare-release-pr.yaml
+++ b/.github/workflows/prepare-release-pr.yaml
@@ -53,5 +53,6 @@ jobs:
         PRERELEASE: ${{ github.event.inputs.prerelease }}
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh auth login
+        git config user.name 'subliminal bot'
+        git config user.email diaoulael@gmail.com
         tox -e prepare-release-pr -- ${BRANCH} --bump=${BUMP} --prerelease=${PRERELEASE}
