--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -100,6 +100,7 @@ jobs:
             target = ''
           print(f'::set-output name=target::{target}')"
       - name: Deploy
+        if: github.event_name == 'push'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
